# planet-system-opengl

./: CMakeLists.txt  Camera.h  Shader.h  Sphere.cpp  Sphere.h  main.cpp
Shaders/: lighting.fs
